Fixes Component Overlapping in Service -> Catalog Form

--- a/app/stylesheet/ddf_override.scss
+++ b/app/stylesheet/ddf_override.scss
@@ -5,13 +5,12 @@
 }
 
 #dual-list-sub-form-catalog {
-  .bx--row--condensed {
-    svg {
-      height: 48px;
-    }
-  }
   #move-right, #move-all-right, #move-all-left, #move-left {
-    width: 130px;
+    svg {
+      position: unset;
+    }
+
+    max-width: 100%;
   }
 }
 
